--- a/frontend/styles/AdditionalArticles.module.scss
+++ b/frontend/styles/AdditionalArticles.module.scss
@@ -1,28 +1,16 @@
-.additionalArticles {
-    margin-top: 20px; 
+.additionalList {
+    list-style: none; 
+    padding: 0;
+    margin: 0;
 }
 
-.header {
-    font-size: 20px;
-    margin-bottom: 10px; 
-}
-
-.list {
-    display: flex; 
-    list-style: none;
-    padding: 0; 
-}
-
-.item {
-    margin-bottom: 5px; 
-}
-
-.link {
-    color: blue; 
-    text-decoration: underline;
+.linkButton {
+    all: unset; 
+    color: blue;
+    text-decoration: underline; 
     cursor: pointer; 
 }
 
-.link:hover {
+.linkButton:hover {
     color: darkblue; 
 }
