--- a/frontend/styles/ArticleList.module.scss
+++ b/frontend/styles/ArticleList.module.scss
@@ -2,6 +2,11 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  direction: rtl; 
+  text-align: right; 
+  
 }
 
 .articleItem {
@@ -13,8 +18,14 @@
 }
 
 .image {
-  width: 100%;
+  width: 80%; 
+  max-width: 600px;
+  height: auto;
   border-radius: 5px;
+  margin-bottom: 20px; 
+  display: block;
+  margin-right: 0; 
+  margin-left: auto; 
 }
 
 .title {
