--- a/frontend/styles/ArticlePage.module.scss
+++ b/frontend/styles/ArticlePage.module.scss
@@ -1,5 +1,6 @@
 .tags {
   margin-top: 10px; 
+  direction: rtl; 
   display: flex; 
   flex-wrap: wrap; 
   gap: 10px; 
@@ -13,7 +14,7 @@
   }
 
   li {
-    list-style: none;
+    
     display: inline; 
     margin: 0;
   }
